[package]
name = "skater"
version = "0.1.0"
edition = "2021"

# small optimizations in debug mode
[profile.dev]
opt-level = 1

# high optimizations for dependencies (e.g  bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# NOTE revert dynamic_linking before release
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
